Implement a basic FileSystem for fabric-loader to access